[tool.poetry]
name = "playlist_ripper"
version = "0.1.0"
description = "Web application that converts Deezer playlists into MP3 archives."
authors = ["Simon Scatton <simon.scatton@epita.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
